fix: z-index of header

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -191,6 +191,7 @@ a:focus {
   height: 100%;
   max-height: 176px;
   transition: max-height 0.4s ease-out;
+  z-index: 999;
 }
 
 .logo {
